WIP: FileInput/ArgSpec updates.